# non-constant-memory

./: Makefile  README.md  json-unify-exe.hp  json-unify.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
